# dezero_rs

./: Cargo.toml  Makefile  goldstein.dot  my_sin.dot  tanh.dot
src/: lib.rs
steps/: step01.rs  step02.rs  step03.rs  step04.rs  step06.rs  step07.rs  step09.rs  step11.rs  step12.rs  step13.rs  step14.rs  step16.rs  step17.rs  step18.rs  step19.rs  step20.rs  step21.rs  step22.rs  step23.rs  step24.rs  step26.rs  step27.rs  step28.rs  step29.rs  step33.rs  step34.rs  step35.rs  step36.rs  step37.rs  step38.rs  step39.rs  step40.rs  step41.rs  step42.rs  step43.rs  step44.rs  step45.rs  step46.rs  step47.rs  step48.rs  (+26 more)
