[package]
name = "dezero"
version = "0.1.0"
edition = "2024"

[[test]]
name = "step01"
path = "steps/step01.rs"

[[test]]
name = "step02"
path = "steps/step02.rs"

[[test]]
name = "step03"
path = "steps/step03.rs"

[[test]]
name = "step04"
path = "steps/step04.rs"

[[test]]
name = "step06"
path = "steps/step06.rs"

[[test]]
name = "step07"
path = "steps/step07.rs"

[[test]]
name = "step09"
path = "steps/step09.rs"

[[test]]
name = "step11"
path = "steps/step11.rs"

[[test]]
name = "step12"
path = "steps/step12.rs"

[[test]]
name = "step13"
path = "steps/step13.rs"

[[test]]
name = "step14"
path = "steps/step14.rs"

[[test]]
name = "step16"
path = "steps/step16.rs"

[[test]]
name = "step17"
path = "steps/step17.rs"

[[test]]
name = "step18"
path = "steps/step18.rs"

[[test]]
name = "step19"
path = "steps/step19.rs"

[[test]]
name = "step20"
path = "steps/step20.rs"

[[test]]
name = "step21"
path = "steps/step21.rs"

[[test]]
name = "step22"
path = "steps/step22.rs"

[[test]]
name = "step23"
path = "steps/step23.rs"

[[test]]
name = "step24"
path = "steps/step24.rs"

[[test]]
name = "step26"
path = "steps/step26.rs"

[[test]]
name = "step27"
path = "steps/step27.rs"

[[test]]
name = "step28"
path = "steps/step28.rs"

[[test]]
name = "step29"
path = "steps/step29.rs"

[dependencies]
ndarray = "0.16"
