[package]
name = "dezero"
version = "0.1.0"
edition = "2024"

[[test]]
name = "step01"
path = "steps/step01.rs"

[[test]]
name = "step02"
path = "steps/step02.rs"

[[test]]
name = "step03"
path = "steps/step03.rs"

[[test]]
name = "step04"
path = "steps/step04.rs"

[[test]]
name = "step06"
path = "steps/step06.rs"

[[test]]
name = "step07"
path = "steps/step07.rs"

[[test]]
name = "step09"
path = "steps/step09.rs"

[[test]]
name = "step11"
path = "steps/step11.rs"

[[test]]
name = "step12"
path = "steps/step12.rs"

[[test]]
name = "step13"
path = "steps/step13.rs"

[[test]]
name = "step14"
path = "steps/step14.rs"

[[test]]
name = "step16"
path = "steps/step16.rs"

[[test]]
name = "step17"
path = "steps/step17.rs"

[[test]]
name = "step18"
path = "steps/step18.rs"

[[test]]
name = "step19"
path = "steps/step19.rs"

[[test]]
name = "step20"
path = "steps/step20.rs"

[[test]]
name = "step21"
path = "steps/step21.rs"

[[test]]
name = "step22"
path = "steps/step22.rs"

[[test]]
name = "step23"
path = "steps/step23.rs"

[[test]]
name = "step24"
path = "steps/step24.rs"

[[test]]
name = "step26"
path = "steps/step26.rs"

[[test]]
name = "step27"
path = "steps/step27.rs"

[[test]]
name = "step28"
path = "steps/step28.rs"

[[test]]
name = "step29"
path = "steps/step29.rs"

[[test]]
name = "step33"
path = "steps/step33.rs"

[[test]]
name = "step34"
path = "steps/step34.rs"

[[test]]
name = "step35"
path = "steps/step35.rs"

[[test]]
name = "step36"
path = "steps/step36.rs"

[[test]]
name = "step37"
path = "steps/step37.rs"

[[test]]
name = "step38"
path = "steps/step38.rs"

[[test]]
name = "step39"
path = "steps/step39.rs"

[[test]]
name = "step40"
path = "steps/step40.rs"

[[test]]
name = "step41"
path = "steps/step41.rs"

[[test]]
name = "step42"
path = "steps/step42.rs"

[[test]]
name = "step43"
path = "steps/step43.rs"

[[test]]
name = "step44"
path = "steps/step44.rs"

[[test]]
name = "step45"
path = "steps/step45.rs"

[[test]]
name = "step46"
path = "steps/step46.rs"

[[test]]
name = "step47"
path = "steps/step47.rs"

[[test]]
name = "step48"
path = "steps/step48.rs"

[[test]]
name = "step49"
path = "steps/step49.rs"

[[test]]
name = "step50"
path = "steps/step50.rs"

[[test]]
name = "step51"
path = "steps/step51.rs"

[[test]]
name = "step53"
path = "steps/step53.rs"

[[test]]
name = "step54"
path = "steps/step54.rs"

[[test]]
name = "step55"
path = "steps/step55.rs"

[[test]]
name = "step57"
path = "steps/step57.rs"

[[test]]
name = "step59"
path = "steps/step59.rs"

[[test]]
name = "step60"
path = "steps/step60.rs"

[[test]]
name = "step61"
path = "steps/step61.rs"

[[test]]
name = "step62"
path = "steps/step62.rs"

[[test]]
name = "step63"
path = "steps/step63.rs"

[[test]]
name = "step64"
path = "steps/step64.rs"

[[test]]
name = "step65"
path = "steps/step65.rs"

[[test]]
name = "step66"
path = "steps/step66.rs"

[[test]]
name = "step67"
path = "steps/step67.rs"

[[test]]
name = "step68"
path = "steps/step68.rs"

[[test]]
name = "step69"
path = "steps/step69.rs"

[[test]]
name = "step70"
path = "steps/step70.rs"

[[test]]
name = "step71"
path = "steps/step71.rs"

[dependencies]
ndarray = "0.16"
ureq = "3"
flate2 = "1"
